# tally

./: .gitignore  CMakeLists.txt  README.md  README_CN.md  kmpkg-configuration.json  kmpkg.json  setup.py
benchmark/: config.h.in
cmake/: tally_deps.cmake
examples/: foo_ex.cc
tally/: CMakeLists.txt  base_stats_reporter.h  buckets.cc  buckets.h  buckets_iterator.cc  buckets_iterator.h  collector.cc  collector.h  config.cc  config.h  counter.h  flag.cc  flag.h  gauge.h  histogram.cc  histogram.h  latency_recorder.cc  latency_recorder.h  lock_timer.h  noop_stats_reporter.cc  noop_stats_reporter.h  passive_status.h  reporter.cc  reportor.h  scope.cc  scope.h  scope_builder.cc  scope_builder.h  sigar.cc  sigar.h  sigar_metric.cc  sigar_metric.h  stats_reporter.h  status.h  stopwatch.cc  stopwatch.h  stopwatch_recorder.h  tally.h  variable.cc  variable.h  (+2 more)
tally/impl/: agent_group.h  buckets_calculator.cc  buckets_calculator.h  call_op_returning_void.h  combiner.h  histogram_bucket.cc  histogram_bucket.h  is_atomical.h  percentile.cc  percentile.h  reducer.h  sampler.cc  sampler.h  series.h  vector.h
tally/reporters/: dump_json_stats_reporter.cc  dump_json_stats_reporter.h  json_dumper.cc  json_dumper.h  json_stats_reporter.cc  json_stats_reporter.h  prometheus_stats_reporter.cc  prometheus_stats_reporter.h
tally/sigar/: CMakeLists.txt  sigar.cc  sigar.h  sigar_cache.cc  sigar_fileinfo.cc  sigar_fileinfo.h  sigar_format.cc  sigar_format.h  sigar_getline.cc  sigar_getline.h  sigar_os.h  sigar_private.h  sigar_ptql.cc  sigar_ptql.h  sigar_signal.cc  sigar_util.cc  sigar_util.h
tally/sigar/os/darwin/: darwin_sigar.cc  sigar_os.h
tally/sigar/os/linux/: linux_sigar.cc  sigar_os.h
tally/sigar/os/win32/: peb.cc  sigar_os.h  sigar_pdh.h  win32_sigar.cc  wmi.cc
tally/utility/: normalize_name.cc  normalize_name.h  task_timer.h  type_traits.h  wildcard_matcher.h
tests/: CMakeLists.txt  agent_group_test.cc  buckets_test.cc  config.h.in  counter_test.cc  gauge_test.cc  histogram_test.cc  lock_timer_test.cc  mock_stats_reporter.h  percentile_test.cc  recorder_test.cc  reducer_test.cc  sampler_test.cc  scope_test.cc  scoped_lock.h  status_test.cc  timer_test.cc  variable_test.cc  window_test.cc
tests/sigar/: CMakeLists.txt  cpu_test.cc  fs_test.cc  loadavg_test.cc  mem_test.cc  netconn_test.cc  netif_test.cc  pid_test.cc  proc_test.cc  reslimit_test.cc  swap_test.cc  sysinfo_test.cc  tests.h  uptime_test.cc
